--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "camillecelaries/camillecelaries.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  name             : "Camille Célariès"
   pronouns         : # example: "she/her"  
   bio              : "Ph.D. Student in Biophysics"
   location         : "Lab. Charles Coulomb, Montpellier"
