--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,9 +6,9 @@ main:
     url: /teaching/ 
   - title: "Documents"
     url: /documents/
-  - title: "Talks"
-    url: /talks/ 
-  - title: "Codes"
-    url: /codes/
+ # - title: "Talks"
+ #   url: /talks/ 
+  #- title: "Codes"
+   # url: /codes/
   - title: "Resume"
     url: /cv/
