--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   pronouns         : # example: "she/her"  
   bio              : "Ph.D. Student in Biophysics"
   location         : "Lab. Charles Coulomb, Montpellier"
-  employer         : #""
+  employer         : "Montpellier"
   uri              : # URL
   email            : "celariesc@gmail.com" 
 
