--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ locale                   : "en-US"
 title                    : "Home"
 title_separator          : "-"
 name                     : &name "Camille Célariès"
-description              : &description "Ph.D. Student in Biophysics"
+description              : &description "PhD student in Biophysics"
 url                      : https://camillecelaries.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "camillecelaries/camillecelaries.github.io"
@@ -24,9 +24,9 @@ author:
   avatar           : "IdCC.jpg"
   name             : "Camille Célariès"
   pronouns         : # example: "she/her"
-  bio              : "PhD student in biophysics"
-  location         : "Lab. Charles Coulomb, Montpellier"
-  employer         : # "Montpellier"
+  bio              : "PhD student in Biophysics"
+  location         : "Montpellier, France"
+  employer         : "Laboratory Charles Coulomb"
   uri              : # URL
   email            : "celariesc@gmail.com"
 
