--- a/_config.yml
+++ b/_config.yml
@@ -26,9 +26,9 @@ author:
   pronouns         : # example: "she/her"
   bio              : "PhD student in Biophysics"
   location         : "Montpellier, France"
-  employer         : "Laboratory Charles Coulomb"
+  employer         : "Lab. Charles Coulomb"
   uri              : # URL
-  email            : "celariesc@gmail.com"
+  email            : "email : "
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
