--- a/_config.yml
+++ b/_config.yml
@@ -32,8 +32,8 @@ author:
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : teee #"https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
-  impactstory      : test # URL
+  googlescholar    : #"https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  impactstory      : # URL
   orcid            : #"http://orcid.org/yourorcidurl"
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   researchgate     : # URL
@@ -42,7 +42,7 @@ author:
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "camillecelaries"
+  github           : # "camillecelaries"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
