--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 locale                   : "en-US"
 title                    : "Home"
 title_separator          : "-"
-name                     : &name "Camille Célariès"
+name                     : &name "Camille Célariès (camille.celaries (@) umontpellier.fr)"
 description              : &description "PhD student in Biophysics"
 url                      : https://camillecelaries.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
