--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "camillecelaries/camillecelaries.github.io"
 author:
   # Biographic information
   avatar           : "IdCC.jpg"
-  name             : "Camille Célariès"
+  name             : "Camille Célariès (camille.celaries (@) umontpellier.fr)"
   pronouns         : # example: "she/her"
   bio              : "PhD student in Biophysics"
   location         : "Montpellier, France"
