--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 locale                   : "en-US"
 title                    : "Home"
 title_separator          : "-"
-name                     : &name "Camille Célariès (camille.celaries (@) umontpellier.fr)"
+name                     : &name "Camille Célariès"
 description              : &description "PhD student in Biophysics"
 url                      : https://camillecelaries.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
@@ -22,13 +22,13 @@ repository               : "camillecelaries/camillecelaries.github.io"
 author:
   # Biographic information
   avatar           : "IdCC.jpg"
-  name             : "Camille Célariès (camille.celaries (@) umontpellier.fr)"
+  name             : "Camille Célariès"
   pronouns         : # example: "she/her"
   bio              : "PhD student in Biophysics"
   location         : "Montpellier, France"
   employer         : "Lab. Charles Coulomb"
-  uri              : # URL
-  email            : "camille.celaries@umontpellier.fr"
+  uri              : "(camille.celaries@umontpellier.fr)" # URL
+  email            : "(camille.celaries @ umontpellier.fr)"
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
