--- a/_config.yml
+++ b/_config.yml
@@ -23,12 +23,12 @@ author:
   # Biographic information
   avatar           : "IdCC.jpg"
   name             : "Camille Célariès"
+  pronouns         : # ""
   bio              : "PhD student in Biophysics"
   location         : "Montpellier, France"
   employer         : "Lab. Charles Coulomb"
-  pronouns         : "camille.celaries @ umontpellier.fr"
   uri              : # URL
-  email            : #
+  email            : "camille.celaries@umontpellier.fr"
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
