--- a/_config.yml
+++ b/_config.yml
@@ -56,7 +56,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : "camillecelaries" # Username
+  linkedin         : "camille-célariès-821b45165" # Username
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
