--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author:
   location         : "Montpellier, France"
   employer         : "Lab. Charles Coulomb"
   uri              : # URL
-  email            : "camille.celaries@umontpellier.fr"
+  email            : "test" #camille.celaries@umontpellier.fr"
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
