--- a/_config.yml
+++ b/_config.yml
@@ -25,10 +25,11 @@ author:
   name             : "Camille Célariès"
   pronouns         : # ""
   bio              : "PhD student in Biophysics"
+  bio              : test
   location         : "Montpellier, France"
   employer         : "Lab. Charles Coulomb"
   uri              : # URL
-  email            : "test" #camille.celaries@umontpellier.fr"
+  email            : "camille.celaries@umontpellier.fr"
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
