--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   name             : "Camille Célariès"
   pronouns         : # ""
   bio              : "PhD student in Biophysics"
-  bio              : test
+  bio2              : test
   location         : "Montpellier, France"
   employer         : "Lab. Charles Coulomb"
   uri              : # URL
