--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ author:
   email2           : "test"
 
   # Academic websites
-  arxiv            : "test" # URL - Update with the correct link to your profile
+  arxiv            : # URL - Update with the correct link to your profile
   googlescholar    : #"https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
   impactstory      : # URL
   orcid            : #"http://orcid.org/yourorcidurl"
