--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ author:
   employer         : "Lab. Charles Coulomb"
   uri              : # URL
   email            : # "camille.celaries@umontpellier.fr"
-  email2           : "test" # row email
+  email2           : "camille.celaries (@) umontpellier.fr" # row email
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
