--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,8 @@ author:
   employer         : "Lab. Charles Coulomb"
   uri              : # URL
   email            : # "camille.celaries@umontpellier.fr"
-  email2           : "camille.celaries (@) umontpellier.fr" # row email
+  email2           : "camille.celaries (@)" # row email
+  email2bis        : "umontpellier.fr" # to put the email on 2 lines
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
