--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,7 +3,11 @@ main:
   - title: "Research"
     url: /research/
   - title: "Teaching"
-    url: /teaching/ 
+    url: /teaching/
+  - title: "Diffusion"
+    url: /diffusion/
+  - title: "Events"
+    url: /events/
   - title: "Documents"
     url: /documents/
  # - title: "Talks"
