--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,7 +2,7 @@
 main:
   - title: "Teaching"
     url: /teaching/
-  - title: "Scientific diffusion"
+  - title: "Diffusion"
     url: /diffusion/
   - title: "Events"
     url: /events/
