--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   pronouns         : # ""
   bio              : "PhD student in Biophysics"
   location         : "Montpellier, France"
-  employer         : "Lab. Charles Coulomb"
+  employer         : "Charles Coulomb Lab."
   uri              : # URL
   email            : "camille.celaries@umontpellier.fr"
   email2           : # "camille.celaries" # row email
